# conductor

./: .env_example  .gitignore  Dockerfile  README.md  conductor.nginx  conductor.service  conductor_bot.service  dev_run.py  dev_run_bot.py  docker-compose.yml  fastapi_example.service  make_venv_from_poetry.sh  merge_from_front.sh  push.sh  pyproject.toml  requirements.txt  run_test_data_insert.py
conductor/api/: dependencies.py
conductor/api/schemas/: auth.py  base.py  common.py  division.py  event.py  mailcode.py  quizz.py  roadmap.py  roadmap_template.py  shop.py  token.py  user.py
conductor/api/v1/: __init__.py  auth.py  authentication.py  divisions.py  echo.py  event.py  me.py  quizz.py  roadmap_template.py  role.py  routers.py  shop.py  (+2 more)
conductor/core/: asgi.py  create_app.py  events.py  misc.py  settings.py  setup_logging.py
conductor/database/: base.py  models.py
conductor/db/: base.py  db.py  models.py
conductor/site/: pages.py
conductor/testdata/: insert_test_data.py
conductor/utils/: send_mail.py
conductor_bot/: config.py  consts.py  main.py  utils.py
conductor_bot/handlers/: user.py
conductor_bot/keyboards/: inline.py
conductor_bot/misc/: db.py  states.py
conductor_bot/models/: users.py
static/: app.apk  auth.html  listuser.html  profile.html  reg.html  roadmap.html
static/css/: card-form.css  constants.css  main.css
static/js/: adduser.js  auth.js  checkrole.js  events.js  main.js  network.js  profile.js  reg.js  shop.js
templates/: adduser.html  auth.html  events.html  network.html  profile.html  roadmap.html  shop.html
(+10 files in other folders)
