[tool.poetry]
name = "conductor"
version = "0.1.0"
description = ""
authors = ["papergoldbag <sabarsenrash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.1.1"
pydantic = {extras = ["email"], version = "^1.10.5"}
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
jinja2 = "^3.1.2"
aiogram = "^2.25.1"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
